Update cpp example

--- a/example-vga-cpp/Makefile
+++ b/example-vga-cpp/Makefile
@@ -1,3 +1,6 @@
 build:
-	@gcc -Xlinker "-Tlinker.ld" -nostdinc -nostdlib -ffreestanding -I include print.cpp
+	@gcc -m64 -Xlinker "-Tlinker.ld" -nostdinc -nostdlib -ffreestanding -I include print.cpp
 	@llvm-objcopy -O binary a.out print.bin 
+
+dump:
+	@llvm-objdump -d a.out
