Update and fix C++ syscall implementation (wip)

--- a/cpp/example-print/Makefile
+++ b/cpp/example-print/Makefile
@@ -1,5 +1,5 @@
 build:
-	@gcc -m64 -Xlinker "-Tlinker.ld" -nostdinc -nostdlib -ffreestanding -I include print.cpp
+	@gcc -m64 -Xlinker "-Tlinker.ld" -nostdinc -nostdlib -ffreestanding -I ../include print.cpp
 	@llvm-objcopy -O binary a.out print.bin 
 
 dump:
