--- a/cpp/example-print/Makefile
+++ b/cpp/example-print/Makefile
@@ -1,6 +1,6 @@
 build:
-	@gcc -m64 -Xlinker "-Tlinker.ld" -nostdinc -nostdlib -ffreestanding -I ../include print.cpp
-	@llvm-objcopy -O binary a.out print.bin 
+	@gcc -m64 -static -n -Xlinker "-Tlinker.ld" -nostdinc -nostdlib -ffreestanding -I ../include -o print.elf print.cpp
+	@llvm-objcopy -O binary print.elf print.bin 
 
 dump:
 	@llvm-objdump -d a.out
