Upgrade Go ELF configuration

--- a/go/example-print/Makefile
+++ b/go/example-print/Makefile
@@ -1,3 +1,5 @@
+export CGO_ENABLED=0
+
 build:
 	@docker run --rm -v $(shell pwd):/src tinygo/tinygo:0.38.0 tinygo build \
 		-o /src/hello.elf \
@@ -5,6 +7,6 @@ build:
 		-no-debug \
 		-opt=z \
 		-gc=none \
-		-ldflags "-extldflags=-T/src/linker.ld" \
+		-ldflags "--extldflags='-T /src/linker.ld --no-pie --static --strip-debug'" \
 		/src/hello.go
 	@llvm-objcopy -O binary hello.elf hello.bin 
